# Trayd

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/trayd/: __init__.py  __main__.py  backtest.py  config.py  main.py  portfolio.py  report.py  symbols.py
src/trayd/algorithms/: __init__.py  adx_rsi.py  algorithm.py  anti_retail.py  arbitrage.py  harami.py  intra_short.py  momentum.py  scanner.py  sell_open.py  short_daily.py  short_test.py  shorts.py  test.py
src/trayd/data/: __init__.py  data_query.py  granularity.py  historical_data.py  market_cap_downloader.py  ohlcv.py  parquet_downloader.py  parquet_loader.py  polygon_downloader.py  yf_downloader.py
src/trayd/index/: __init__.py  index.py  just_spy.py  old_index.py  sp_100.py  sp_50.py  sp_500.py  top_25.py  top_50.py
src/trayd/indicators/: __init__.py  adx.py  at.py  atr.py  beta_ma.py  breakout_5.py  ema.py  flag.py  indicator.py  macd.py  ocma.py  overnight_gap.py  rbc.py  roc.py  rsi.py  sma.py  test.py
src/trayd/live/: Algorithm.py  Alpaca.py  Config.py  Indicator.py  LiveData.py  Logger.py  NonVolatile.py  Portfolio.py  Terminal.py  Trayd.py  TraydUX.py  helpers.py  main.py  models.py  non_volatile.json
src/trayd/market_cap/: cik.py  market_cap.py  sec_scraper.py  shares_outstanding.py  shares_outstanding_cache.json
src/trayd/scripts/: IndexBuilder.py  SP100.py  create_index.py  json_to_parquet.py  market.py  market_cap_index.py  print_parquet.py  s_compound.py  test.py  testing.py
src/trayd/util/: __init__.py  helpers.py  logger.py  package_path.py  progress_bar.py
(+30 files in other folders)
